Add Deepstream communication, fix UI, change API calls based on new features

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script src="https://cdn.deepstream.io/js/client/latest/ds.min.js"></script>
     <meta
       name="Conversational Agent for Multilingual Group"
       content=""
